--- a/assets/css/stylekanban.css
+++ b/assets/css/stylekanban.css
@@ -87,3 +87,10 @@ body.swal2-shown > [aria-hidden='true'] {
   transition: 0.1s filter;
   filter: blur(3px);
 }
+
+.visevent{
+    display: block;
+}
+.formedit{
+    display: none;
+}
